--- a/app/config/config.yml
+++ b/app/config/config.yml
@@ -82,7 +82,7 @@ fos_rest:
         failed_validation: HTTP_BAD_REQUEST
         # view_response_listener: force
         empty_content: 204
-    disable_csrf_role: ROLE_API
+    disable_csrf_role: ROLE_USER
     # view_handler: 
 
 sensio_framework_extra:
