--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -5,9 +5,16 @@ security:
     # http://symfony.com/doc/current/book/security.html#where-do-users-come-from-user-providers
     providers:
         in_memory:
-            memory: ~
-
+            memory:
+                users:
+                    user: { password: user, roles: [ 'ROLE_USER', 'ROLE_API' ] }
+                    admin: { password: admin, roles: [ 'ROLE_USER', 'ROLE_API' ] }
     firewalls:
+        default:
+            anonymous: ~
+            http_basic: ~
+
+
         # disables authentication for assets and the profiler, adapt it according to your needs
         dev:
             pattern: ^/(_(profiler|wdt)|css|images|js)/
@@ -22,3 +29,9 @@ security:
 
             # form_login: ~
             # http://symfony.com/doc/current/cookbook/security/form_login_setup.html
+
+    access_control:
+        - { path: ^/projects, roles: ROLE_USER }
+
+    encoders:
+        Symfony\Component\Security\Core\User\User: plaintext
