--- a/app/config/security.yml
+++ b/app/config/security.yml
@@ -16,12 +16,12 @@ security:
 
 
         # disables authentication for assets and the profiler, adapt it according to your needs
-        dev:
-            pattern: ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+#        dev:
+#            pattern: ^/(_(profiler|wdt)|css|images|js)/
+#            security: false
 
-        main:
-            anonymous: ~
+#        main:
+#            anonymous: ~
             # activate different ways to authenticate
 
             # http_basic: ~
